vendor/wasm-bindgen-macro-0.2.73/ui-tests/start-function.stderr
error: the start function cannot have arguments
 --> $DIR/start-function.rs:7:13
  |
7 | pub fn foo2(x: u32) {}
  |             ^^^^^^

error: the start function cannot have generics
  --> $DIR/start-function.rs:10:12
   |
10 | pub fn foo3<T>() {}
   |            ^^^

error[E0277]: the trait bound `std::result::Result<wasm_bindgen::JsValue, ()>: wasm_bindgen::__rt::Start` is not satisfied
  --> $DIR/start-function.rs:15:1
   |
15 | #[wasm_bindgen(start)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `wasm_bindgen::__rt::Start` is not implemented for `std::result::Result<wasm_bindgen::JsValue, ()>`
   |
   = help: the following implementations were found:
             <std::result::Result<(), E> as wasm_bindgen::__rt::Start>
   = note: required by `start`
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `std::result::Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>: wasm_bindgen::__rt::Start` is not satisfied
  --> $DIR/start-function.rs:18:1
   |
18 | #[wasm_bindgen(start)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `wasm_bindgen::__rt::Start` is not implemented for `std::result::Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>`
   |
   = help: the following implementations were found:
             <std::result::Result<(), E> as wasm_bindgen::__rt::Start>
   = note: required by `start`
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `std::result::Result<wasm_bindgen::JsValue, ()>: wasm_bindgen::__rt::Start` is not satisfied
  --> $DIR/start-function.rs:27:1
   |
27 | #[wasm_bindgen(start)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `wasm_bindgen::__rt::Start` is not implemented for `std::result::Result<wasm_bindgen::JsValue, ()>`
   |
   = help: the following implementations were found:
             <std::result::Result<(), E> as wasm_bindgen::__rt::Start>
   = note: required by `start`
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `std::result::Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>: wasm_bindgen::__rt::Start` is not satisfied
  --> $DIR/start-function.rs:30:1
   |
30 | #[wasm_bindgen(start)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `wasm_bindgen::__rt::Start` is not implemented for `std::result::Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>`
   |
   = help: the following implementations were found:
             <std::result::Result<(), E> as wasm_bindgen::__rt::Start>
   = note: required by `start`
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
